# jpeg-utils

./: CMakeLists.txt  pod.xml
cmake/: FindIPP.cmake
src/: CMakeLists.txt  jpeg-utils-ijg.c  jpeg-utils.c  jpeg-utils.h
src/ipp/: jccolor.c  jchuff.c  jcsample.c  jdatadst.c  jdcolor.c  jdhuff.c  jpeg-utils-ipp.c  jpeg-utils-ipp.h  jpegipp.h
